hdone/objects/AuditSettingInstruction__mdt.object
<CustomObject>
    <description>Instructions for AuditSettings</description>
    <fields>
        <fullName>InstructionText__c</fullName>
        <description>Instructions</description>
        <inlineHelpText>Instructions</inlineHelpText>
        <label>InstructionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstructionsGeneral__c</fullName>
        <description>General instructions for scenario</description>
        <inlineHelpText>General instructions for scenario</inlineHelpText>
        <label>InstructionsGeneral</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstructionsScenario__c</fullName>
        <description>Specific instructions for scenario</description>
        <inlineHelpText>Specific instructions for scenario</inlineHelpText>
        <label>InstructionsScenario</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is record active?</description>
        <inlineHelpText>Is record active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <label>AuditSettingInstruction</label>
    <pluralLabel>AuditSettingInstructions</pluralLabel>
</CustomObject>